<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"
    >

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/email"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:id="@+id/emailInputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="50dp"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/password"
        android:layout_marginBottom="10dp"
        />

    <EditText
        android:id="@+id/passwordInputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="50dp"
        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:textColor="@color/black"
        android:backgroundTint="@color/yellow"
        />

    <TextView
        android:id="@+id/signupRedirect"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/signup_redirect"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        />

</LinearLayout>