<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:adjustViewBounds="false"
            app:srcCompat="@drawable/hero_banner" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80000000"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_sub"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_marginTop="8dp"
                android:gravity="center"/>

            <Button
                android:id="@+id/btnGetStarted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_started"
                android:layout_marginTop="24dp"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/yellow"
                android:onClick="buttonClick"
                />

        </LinearLayout>

    </FrameLayout>


</LinearLayout>